fix: align right balance block to center

--- a/apps/bytebank/src/app/(pages)/home/page.module.scss
+++ b/apps/bytebank/src/app/(pages)/home/page.module.scss
@@ -6,7 +6,7 @@
 .balanceContainer {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    // justify-content: space-between;
     align-items: flex-start;
     width: 100%;
     gap: 32px; // equivale a theme.spacing(4)
@@ -24,6 +24,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     gap: 48px;
+    margin: 32px;
 }
 
 .greetingBlock {
@@ -36,7 +37,7 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
-    max-width: 100%;
+    // max-width: 100%;
 }
 
 
@@ -83,6 +84,7 @@
     gap: 16px;
     justify-content: space-between;
     min-height: 400px;
+    max-width: 690px;
 
     @media (max-width: 767px) {
         display: flex;
